--- a/style2.css
+++ b/style2.css
@@ -68,21 +68,84 @@ h1
     text-transform: uppercase;
     font-size: 70px;
     text-align: center;
-    margin-top: 275px;
+    margin-top: 400px;
 }
 
-.filmid
+.jõulutoidud
 {
     color: white;
     text-transform: uppercase;
-    font-size: 50px;
+    font-size: 40px;
+    margin-bottom: 25px
    
 }
 
-.filminimed
+.toidudvarem
 {
     margin-left: 40px;
-    margin-bottom: 100px;
-    font-size: 40px;
-    color:rgb(236, 143, 159);
+    margin-bottom: 10px;
+    font-size: 25px;
+    color: rgb(150, 0, 0);
+}
+
+.toidudpraegu
+{
+    margin-left: 40px;
+    margin-bottom: 10px;
+    font-size: 25px;
+    color: rgb(0, 150, 0);
+}
+
+.jõulujoogid
+{
+    margin-left: 40px;
+    margin-bottom: 10px;
+    font-size: 25px;
+    color: rgb(0, 0, 150);
+}
+
+.vanadtoidud
+{
+    margin-left: 60px;
+    margin-bottom: 15px;
+    font-size: 18px;
+    color: rgb(150, 0, 0);
+}
+
+.uuedtoidud
+{
+    margin-left: 60px;
+    margin-bottom: 15px;
+    font-size: 18px;
+    color: rgb(0, 150, 0);
+}
+
+.joogid
+{
+    margin-left: 60px;
+    margin-bottom: 15px;
+    font-size: 18px;
+    color: rgb(0, 0, 150);
+
+}
+
+*
+{
+    box-sizing: border-box;
+}
+
+.column 
+{
+    float: left;
+    width: 33.33%;
+    padding: 10px;
+    
+}
+
+
+.row::after 
+{
+    content: "";
+    display: table;
+    clear: both;
 }
