--- a/style3.css
+++ b/style3.css
@@ -84,5 +84,25 @@ h1
     margin-left: 40px;
     margin-bottom: 100px;
     font-size: 40px;
-    color:rgb(236, 143, 159);
+    color:pink;
 }
+
+.faktid
+{
+    font-size: 40px;
+    color: white;
+}
+
+h3
+{
+    color: lightgreen;
+    font-style: italic;
+    font-size: 20px;
+}
+
+p
+{
+    color: lightcoral;
+    font-size: 15px
+}
+
