--- a/style3.css
+++ b/style3.css
@@ -68,41 +68,36 @@ h1
     text-transform: uppercase;
     font-size: 70px;
     text-align: center;
-    margin-top: 275px;
+    margin-top: 400px;
 }
 
-.filmid
-{
-    color: white;
-    text-transform: uppercase;
-    font-size: 50px;
-   
-}
-
-.filminimed
-{
-    margin-left: 40px;
-    margin-bottom: 100px;
-    font-size: 40px;
-    color:pink;
-}
-
-.faktid
-{
-    font-size: 40px;
-    color: white;
-}
 
 h3
-{
-    color: lightgreen;
-    font-style: italic;
-    font-size: 20px;
+{   font-size: 40px;
+    text-transform: uppercase;
+    color: white;
+    font-style: oblique;
+    position: absolute;
+    top: 20px;
+    left: 15px;
+
 }
 
-p
+.punktid
 {
-    color: lightcoral;
-    font-size: 15px
+    font-size: 18px;
+    font-weight: 100;
+    position: absolute;
+    top: 60px;
+    left: 40px;
+    right: 40px;
+    color: beige;
 }
-
+.media
+{
+    position: absolute;
+    top: 550px;
+    left: 1020px;
+    width: 100%;
+    height: 100%;
+}
