--- a/style2.css
+++ b/style2.css
@@ -29,7 +29,7 @@ header
     color: white;
     text-decoration: none;
     padding: 5px 20px;
-    font-family: "Roboto", sans-serif;
+    font-family: Tahoma, sans-serif;
     font-size: 15px;
 }
 
@@ -45,7 +45,7 @@ header
 
 body
 {
-    font-family: monospace;
+    font-family: Tahoma, sans-serif;
 }
 
 .row
@@ -68,15 +68,17 @@ h1
     text-transform: uppercase;
     font-size: 70px;
     text-align: center;
-    margin-top: 400px;
+    margin-top: 165px;
+    -webkit-text-stroke:2px rgb(200, 0, 0);
 }
 
 .jõulutoidud
 {
     color: white;
-    text-transform: uppercase;
+    text-transform: none;
     font-size: 40px;
-    margin-bottom: 25px
+    margin-left: 60px;
+    margin-top: -30px
    
 }
 
@@ -85,7 +87,9 @@ h1
     margin-left: 40px;
     margin-bottom: 10px;
     font-size: 25px;
-    color: rgb(150, 0, 0);
+    color: rgb(200, 0, 0);
+    -webkit-text-stroke:1px black;
+    
 }
 
 .toidudpraegu
@@ -93,7 +97,8 @@ h1
     margin-left: 40px;
     margin-bottom: 10px;
     font-size: 25px;
-    color: rgb(0, 150, 0);
+    color: greenyellow;
+    -webkit-text-stroke:1px black;
 }
 
 .jõulujoogid
@@ -101,31 +106,36 @@ h1
     margin-left: 40px;
     margin-bottom: 10px;
     font-size: 25px;
-    color: rgb(0, 0, 150);
+    color: blue;
+    -webkit-text-stroke:1px black;
 }
 
 .vanadtoidud
 {
     margin-left: 60px;
     margin-bottom: 15px;
-    font-size: 18px;
-    color: rgb(150, 0, 0);
+    font-size: 21px;
+    color: white;
+    -webkit-text-stroke:0.3px red;
 }
 
 .uuedtoidud
 {
     margin-left: 60px;
     margin-bottom: 15px;
-    font-size: 18px;
-    color: rgb(0, 150, 0);
+    font-size: 21px;
+    color: white;
+    -webkit-text-stroke:0.3px yellowgreen;
+    
 }
 
 .joogid
 {
     margin-left: 60px;
     margin-bottom: 15px;
-    font-size: 18px;
-    color: rgb(0, 0, 150);
+    font-size: 21px;
+    color: white;
+    -webkit-text-stroke:0.3px blue;
 
 }
 
@@ -136,6 +146,7 @@ h1
 
 .column 
 {
+    margin-top: 80px;
     float: left;
     width: 33.33%;
     padding: 10px;
