--- a/style2.css
+++ b/style2.css
@@ -78,7 +78,8 @@ h1
     text-transform: none;
     font-size: 40px;
     margin-left: 60px;
-    margin-top: -30px
+    margin-top: -30px;
+    -webkit-text-stroke:1px rgb(200, 0, 0);
    
 }
 
@@ -87,7 +88,7 @@ h1
     margin-left: 40px;
     margin-bottom: 10px;
     font-size: 25px;
-    color: rgb(200, 0, 0);
+    color: red;
     -webkit-text-stroke:1px black;
     
 }
