--- a/style2.css
+++ b/style2.css
@@ -140,6 +140,18 @@ h1
 
 }
 
+.teepilt
+{
+    margin-left: 18px;
+    margin-bottom: 10px;
+}
+
+.tangupilt
+{
+    margin-left: 18px;
+    margin-bottom: 10px;
+}
+
 *
 {
     box-sizing: border-box;
