--- a/style3.css
+++ b/style3.css
@@ -10,7 +10,9 @@ header
     height: 100vh;
     background-size: cover;
     background-position: center;
+    position: relative;
 }
+
  
 .main-nav
 {
@@ -74,14 +76,15 @@ h1
 
 h3
 {   font-size: 40px;
-    text-transform: uppercase;
     color: white;
+    -webkit-text-stroke: 2px rgb(42, 163, 42);
     font-style: oblique;
     position: absolute;
     top: 20px;
     left: 15px;
 
 }
+
 
 .punktid
 {
@@ -91,7 +94,7 @@ h3
     top: 60px;
     left: 40px;
     right: 40px;
-    color: beige;
+    color: white;
 }
 .media
 {
