--- a/style2.css
+++ b/style2.css
@@ -19,12 +19,34 @@ header
     margin-top: 30px;
 }
 
+.main-nav2
+{
+    float: right;
+    list-style: none;
+    margin-top: -70px;
+}
+
 .main-nav li
 {
     display: inline-block;
 }
 
+.main-nav2 li
+{
+    display: inline-block;
+    
+}
+
 .main-nav li a
+{
+    color: white;
+    text-decoration: none;
+    padding: 5px 20px;
+    font-family: Tahoma, sans-serif;
+    font-size: 15px;
+}
+
+.main-nav2 li a
 {
     color: white;
     text-decoration: none;
@@ -38,7 +60,17 @@ header
     border: 1px solid white;
 }
 
+.main-nav2 li.active a
+{
+    border: 1px solid white;
+}
+
 .main-nav li a:hover
+{
+    border: 1px solid white;
+}
+
+.main-nav2 li a:hover
 {
     border: 1px solid white;
 }
