--- a/style2.css
+++ b/style2.css
@@ -12,6 +12,16 @@ header
     background-position: center;
 }
  
+.java 
+{
+    font-family: Tahoma, sans-serif;
+    font-size: 45px;
+    color: red;
+    -webkit-text-stroke: 1px white;
+    margin-left: 80px;
+    margin-top: 300px;
+}
+
 .main-nav
 {
     float: right;
