--- a/style2.css
+++ b/style2.css
@@ -216,3 +216,18 @@ h1
     display: table;
     clear: both;
 }
+
+#punane
+{
+    background-color:rgba(150, 100, 100, 0.8);
+}
+
+#roheline
+{
+    background-color:rgba(100, 150, 100, 0.8);
+}
+
+#sinine
+{
+    background-color: rgba(100, 100, 150, 0.8);
+}
